sample_final/003.ingress-nginx/k8s-ingress-yaml/ssl-sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - secure-ingress.com
    secretName: secure-ingress
  rules:
  - host: secure-ingress.com
    http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
